--- a/client/X11/CMakeLists.txt
+++ b/client/X11/CMakeLists.txt
@@ -138,9 +138,9 @@ if(WITH_XI)
   set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} ${XI_LIBRARIES})
 endif() 
 
-find_package(ImageMagick COMPONENTS MagickCore)
-include_directories(${ImageMagick_MagickCore_INCLUDE_DIRS})
-set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} ${ImageMagick_MagickCore_LIBRARIES})
+#find_package(ImageMagick COMPONENTS MagickCore)
+#include_directories(${ImageMagick_MagickCore_INCLUDE_DIRS})
+#set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} ${ImageMagick_MagickCore_LIBRARIES})
 #SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} /usr/include/ImageMagick-6)
 #SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -I/usr/include/ImageMagick-6)
 
@@ -149,11 +149,17 @@ message(INCLUDE: ${ImageMagick_MagickCore_INCLUDE_DIRS})
 message(LIBS: ${${MODULE_PREFIX}_LIBS})
 
 
-if(NOT ${ImageMagick_MagickCore_FOUND})
-  #just hack it
-  include_directories(/usr/include/ImageMagick-6)
-  set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} /usr/lib64/libMagickCore-6.Q16.so)
-endif()
+#if(NOT ${ImageMagick_MagickCore_FOUND})
+#  #just hack it
+#  include_directories(/usr/include/ImageMagick-6)
+#  set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} /usr/lib64/libMagickCore-6.Q16.so)
+#endif()
+
+#ubuntu
+include_directories(/usr/include/ImageMagick)
+set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} /usr/lib/x86_64-linux-gnu/libMagickCore.so.5)
+
+
 
 
 
