xfreerdp-server: move update thread to new source files

--- a/server/X11/CMakeLists.txt
+++ b/server/X11/CMakeLists.txt
@@ -28,6 +28,8 @@ set(${MODULE_PREFIX}_SRCS
 	xf_input.h
 	xf_encode.c
 	xf_encode.h
+	xf_update.c
+	xf_update.h
 	xf_interface.c
 	xf_interface.h
 	xfreerdp.h)
