xfreerdp-server: link to xrandr

--- a/server/X11/CMakeLists.txt
+++ b/server/X11/CMakeLists.txt
@@ -75,6 +75,10 @@ set(XFIXES_FEATURE_TYPE "RECOMMENDED")
 set(XFIXES_FEATURE_PURPOSE "X11 region")
 set(XFIXES_FEATURE_DESCRIPTION "X11 region fix extension")
 
+set(XRANDR_FEATURE_TYPE "RECOMMENDED")
+set(XRANDR_FEATURE_PURPOSE "X11 resize, rotate and reflect")
+set(XRANDR_FEATURE_DESCRIPTION "X11 resize, rotate and reflect extension")
+
 set(XDAMAGE_FEATURE_TYPE "RECOMMENDED")
 set(XDAMAGE_FEATURE_PURPOSE "X11 region damage")
 set(XDAMAGE_FEATURE_DESCRIPTION "X11 region damage extension")
@@ -83,6 +87,7 @@ find_feature(Xext ${XEXT_FEATURE_TYPE} ${XEXT_FEATURE_PURPOSE} ${XEXT_FEATURE_DE
 find_feature(XShm ${XSHM_FEATURE_TYPE} ${XSHM_FEATURE_PURPOSE} ${XSHM_FEATURE_DESCRIPTION})
 find_feature(XTest ${XTEST_FEATURE_TYPE} ${XTEST_FEATURE_PURPOSE} ${XTEST_FEATURE_DESCRIPTION})
 find_feature(Xfixes ${XFIXES_FEATURE_TYPE} ${XFIXES_FEATURE_PURPOSE} ${XFIXES_FEATURE_DESCRIPTION})
+find_feature(XRandR ${XRANDR_FEATURE_TYPE} ${XRANDR_FEATURE_PURPOSE} ${XRANDR_FEATURE_DESCRIPTION})
 find_feature(Xdamage ${XDAMAGE_FEATURE_TYPE} ${XDAMAGE_FEATURE_PURPOSE} ${XDAMAGE_FEATURE_DESCRIPTION})
 find_feature(Xcursor ${XCURSOR_FEATURE_TYPE} ${XCURSOR_FEATURE_PURPOSE} ${XCURSOR_FEATURE_DESCRIPTION})
 find_feature(Xinerama ${XINERAMA_FEATURE_TYPE} ${XINERAMA_FEATURE_PURPOSE} ${XINERAMA_FEATURE_DESCRIPTION})
@@ -127,6 +132,12 @@ if(WITH_XTEST)
         add_definitions(-DWITH_XTEST)
         include_directories(${XTEST_INCLUDE_DIRS})
         set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} ${XTEST_LIBRARIES})
+endif()
+
+if(WITH_XRANDR)
+        add_definitions(-DWITH_XRANDR)
+        include_directories(${XRANDR_INCLUDE_DIRS})
+        set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} ${XRANDR_LIBRARIES})
 endif()
 
 set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} ${X11_LIBRARIES})
