--- a/client/X11/CMakeLists.txt
+++ b/client/X11/CMakeLists.txt
@@ -30,6 +30,8 @@ set(${MODULE_PREFIX}_SRCS
 	xf_tsmf.h
 	xf_event.c
 	xf_event.h
+	xf_input.c
+	xf_input.h
 	xf_cliprdr.c
 	xf_cliprdr.h
 	xf_monitor.c
@@ -99,12 +101,17 @@ set(XI_FEATURE_TYPE "RECOMMENDED")
 set(XI_FEATURE_PURPOSE "input")
 set(XI_FEATURE_DESCRIPTION "X11 input extension")
 
+set(XRENDER_FEATURE_TYPE "RECOMMENDED")
+set(XRENDER_FEATURE_PURPOSE "rendering")
+set(XRENDER_FEATURE_DESCRIPTION "X11 render extension")
+
 find_feature(XShm ${XSHM_FEATURE_TYPE} ${XSHM_FEATURE_PURPOSE} ${XSHM_FEATURE_DESCRIPTION})
 find_feature(Xinerama ${XINERAMA_FEATURE_TYPE} ${XINERAMA_FEATURE_PURPOSE} ${XINERAMA_FEATURE_DESCRIPTION})
 find_feature(Xext ${XEXT_FEATURE_TYPE} ${XEXT_FEATURE_PURPOSE} ${XEXT_FEATURE_DESCRIPTION})
 find_feature(Xcursor ${XCURSOR_FEATURE_TYPE} ${XCURSOR_FEATURE_PURPOSE} ${XCURSOR_FEATURE_DESCRIPTION})
 find_feature(Xv ${XV_FEATURE_TYPE} ${XV_FEATURE_PURPOSE} ${XV_FEATURE_DESCRIPTION})
 find_feature(Xi ${XI_FEATURE_TYPE} ${XI_FEATURE_PURPOSE} ${XI_FEATURE_DESCRIPTION})
+find_feature(Xrender ${XRENDER_FEATURE_TYPE} ${XRENDER_FEATURE_PURPOSE} ${XRENDER_FEATURE_DESCRIPTION})
 
 if(WITH_XINERAMA)
 	add_definitions(-DWITH_XINERAMA)
@@ -134,6 +141,12 @@ if(WITH_XI)
 	add_definitions(-DWITH_XI)
 	include_directories(${XI_INCLUDE_DIRS})
 	set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} ${XI_LIBRARIES})
+endif()
+
+if(WITH_XRENDER)
+	add_definitions(-DWITH_XRENDER)
+	include_directories(${XRENDER_INCLUDE_DIRS})
+	set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} ${XRENDER_LIBRARIES})
 endif()
 
 include_directories(${CMAKE_SOURCE_DIR}/resources)
