--- a/client/Mac/cli/Info.plist
+++ b/client/Mac/cli/Info.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
-	<key>CFBundleIconFile</key>
+	<string>en</string>
+	<key>CFBundleExecutable</key>
 	<string></string>
+	<key>CFBundleIconFile</key>
+	<string>FreeRDP</string>
 	<key>CFBundleIdentifier</key>
 	<string>FreeRDP.Mac</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -13,14 +15,20 @@
 	<key>CFBundleName</key>
 	<string></string>
 	<key>CFBundlePackageType</key>
-	<string>FMWK</string>
+	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>NSPrincipalClass</key>
+	<key>LSMinimumSystemVersion</key>
 	<string></string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2012 __MyCompanyName__. All rights reserved.</string>
+	<key>NSMainNibFile</key>
+	<string>MainMenu</string>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
 </dict>
 </plist>
