--- a/client/common/CMakeLists.txt
+++ b/client/common/CMakeLists.txt
@@ -19,6 +19,7 @@ set(MODULE_NAME "freerdp-client")
 set(MODULE_PREFIX "FREERDP_CLIENT")
 
 set(${MODULE_PREFIX}_SRCS
+	client.c
 	cmdline.c
 	compatibility.c
 	compatibility.h
