directfb: print "unmaintained" build warning
directfb client is currently unmaintained

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,6 +342,11 @@ endif()
 
 find_feature(X11 ${X11_FEATURE_TYPE} ${X11_FEATURE_PURPOSE} ${X11_FEATURE_DESCRIPTION})
 find_feature(DirectFB ${DIRECTFB_FEATURE_TYPE} ${DIRECTFB_FEATURE_PURPOSE} ${DIRECTFB_FEATURE_DESCRIPTION})
+if (${WITH_DIRECTFB})
+	message(WARNING "
+DIRECTFB is orphaned and not maintained see docs/README.directfb for details
+")
+endif()
 
 find_feature(ZLIB ${ZLIB_FEATURE_TYPE} ${ZLIB_FEATURE_PURPOSE} ${ZLIB_FEATURE_DESCRIPTION})
 find_feature(OpenSSL ${OPENSSL_FEATURE_TYPE} ${OPENSSL_FEATURE_PURPOSE} ${OPENSSL_FEATURE_DESCRIPTION})
