--- a/winpr/libwinpr/pipe/test/CMakeLists.txt
+++ b/winpr/libwinpr/pipe/test/CMakeLists.txt
@@ -5,7 +5,8 @@ set(MODULE_PREFIX "TEST_PIPE")
 set(${MODULE_PREFIX}_DRIVER ${MODULE_NAME}.c)
 
 set(${MODULE_PREFIX}_TESTS
-	TestPipeCreatePipe.c)
+	TestPipeCreatePipe.c
+	TestPipeCreateNamedPipe.c)
 
 create_test_sourcelist(${MODULE_PREFIX}_SRCS
 	${${MODULE_PREFIX}_DRIVER}
