--- a/winpr/libwinpr/pipe/test/CMakeLists.txt
+++ b/winpr/libwinpr/pipe/test/CMakeLists.txt
@@ -6,7 +6,8 @@ set(${MODULE_PREFIX}_DRIVER ${MODULE_NAME}.c)
 
 set(${MODULE_PREFIX}_TESTS
 	TestPipeCreatePipe.c
-	TestPipeCreateNamedPipe.c)
+	TestPipeCreateNamedPipe.c
+	TestPipeCreateNamedPipeOverlapped.c)
 
 create_test_sourcelist(${MODULE_PREFIX}_SRCS
 	${${MODULE_PREFIX}_DRIVER}
