--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,7 +142,7 @@ if(CMAKE_COMPILER_IS_GNUCC)
 		endif()
 	endif()
 	if(CMAKE_BUILD_TYPE STREQUAL "Release")
-		set(CMAKE_C_FLAGS_RELEASE "-DNDEBUG")
+                set(CMAKE_C_FLAGS_RELEASE "-DNDEBUG")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
 	else()
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
@@ -171,6 +171,13 @@ if(MSVC)
 	endif()
 	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
+
+        if(CMAKE_BUILD_TYPE STREQUAL "Release")
+        else()
+                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Zi")
+                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi")
+        endif()
+
 endif()
 
 if(WIN32)
