--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,10 +160,10 @@ endif()
 
 if(MSVC)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Gd")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MD")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /O2")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Ob2")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W2")
+	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MD")
+	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /O2")
+	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Ob2")
+	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W2")
 	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_AMD64_")
 	else()
