--- a/channels/urbdrc/client/libusb/CMakeLists.txt
+++ b/channels/urbdrc/client/libusb/CMakeLists.txt
@@ -35,9 +35,9 @@ set(${MODULE_PREFIX}_LIBS
 	${CMAKE_THREAD_LIBS_INIT})
 
 set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS}
-	dbus-glib-1
-	usb-1.0
-	udev)
+    ${DBUS_GLIB_LIBRARIES}
+    ${UDEV_LIBRARIES}
+    ${UUID_LIBRARIES})
 
 set_complex_link_libraries(VARIABLE ${MODULE_PREFIX}_LIBS
 	MONOLITHIC ${MONOLITHIC_BUILD}
