Fixed linking with libusb, now linking against correct library.

--- a/channels/urbdrc/client/libusb/CMakeLists.txt
+++ b/channels/urbdrc/client/libusb/CMakeLists.txt
@@ -36,8 +36,9 @@ set(${MODULE_PREFIX}_LIBS
 
 set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS}
     ${DBUS_GLIB_LIBRARIES}
-    ${UDEV_LIBRARIES}
-    ${UUID_LIBRARIES})
+    ${UUID_LIBRARIES}
+    usb-1.0
+    )
 
 set_complex_link_libraries(VARIABLE ${MODULE_PREFIX}_LIBS
 	MONOLITHIC ${MONOLITHIC_BUILD}
