Fixed generation of configure header, now replacing date fields with current date. Added CMake script to generate a variable containing the current date. Removed last argument (the terminating NULL element) from output.

--- a/client/X11/CMakeLists.txt
+++ b/client/X11/CMakeLists.txt
@@ -68,17 +68,26 @@ set(${MODULE_PREFIX}_LIBS
 	${CMAKE_DL_LIBS})
 
 if(WITH_MANPAGES)
+	if(XMLTO_FOUND)
+		# We need the variable ${MAN_TODAY} to contain the current date in ISO
+		# format to replace it in the configure_file step.
+		include(today)
+
+		TODAY(MAN_TODAY)
+
+		configure_file(xfreerdp.1.xml.in xfreerdp.1.xml @ONLY)
+
     add_executable(generate_argument_docbook
         generate_argument_docbook.c)
     target_link_libraries(generate_argument_docbook winpr-utils freerdp-core freerdp-utils freerdp-client)
 
-	if(XMLTO_FOUND)
 		add_custom_command(OUTPUT xfreerdp.1
             COMMAND generate_argument_docbook
-            COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/xfreerdp.1.xml ${CMAKE_CURRENT_BINARY_DIR}/
             COMMAND ${XMLTO_EXECUTABLE} man xfreerdp.1.xml
             WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-			DEPENDS xfreerdp.1.xml generate_argument_docbook)
+			DEPENDS 
+				${CMAKE_CURRENT_BINARY_DIR}/xfreerdp.1.xml 
+				generate_argument_docbook)
 
 		add_custom_target(xfreerdp.manpage ALL
 			DEPENDS xfreerdp.1)
