--- a/client/X11/xfreerdp.1.xml.in
+++ b/client/X11/xfreerdp.1.xml.in
@@ -3,6 +3,8 @@
 PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN"
 "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd" [
 	<!ENTITY syntax SYSTEM "xfreerdp-argument.1.xml">
+	<!ENTITY channels SYSTEM "xfreerdp-channels.1.xml">
+	<!ENTITY examples SYSTEM "xfreerdp-examples.1.xml">
 	]
 >
 
@@ -44,6 +46,10 @@ PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN"
 	</refsect1>
 
 	&syntax;
+
+	&channels;
+
+	&examples;
 
 	<refsect1>
 	<title>LINKS</title>
