Added missing dependency for custom command generating manpage.

--- a/client/X11/CMakeLists.txt
+++ b/client/X11/CMakeLists.txt
@@ -91,6 +91,8 @@ if(WITH_MANPAGES)
             WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 			DEPENDS 
 				${CMAKE_CURRENT_BINARY_DIR}/xfreerdp.1.xml 
+				${CMAKE_CURRENT_SOURCE_DIR}/xfreerdp-examples.1.xml 
+				${CMAKE_CURRENT_SOURCE_DIR}/xfreerdp-channels.1.xml 
 				generate_argument_docbook)
 
 		add_custom_target(xfreerdp.manpage ALL
