--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,6 +227,12 @@ if(APPLE)
                 set(CMAKE_FIND_ROOT_PATH ${CMAKE_FIND_ROOT_PATH} ${FREERDP_IOS_EXTERNAL_SSL_PATH})
         	set_property(GLOBAL PROPERTY XCODE_ATTRIBUTE_SKIP_INSTALL YES)
 	else()
+		set(CMAKE_OSX_DEPLOYMENT_TARGET 10.6)
+
+		if(NOT DEFINED CMAKE_OSX_ARCHITECTURES)
+			set(CMAKE_OSX_ARCHITECTURES i386 x86_64)
+		endif()
+
                 if(IS_DIRECTORY /opt/local/include)
                         include_directories(/opt/local/include)
                         link_directories(/opt/local/lib)
