--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@ _CPack_Packages
 external/*
 !external/README
 
+*.a.objlist.cmake
+*.a.objlist
+*.a.objdir
+*_dummy.c
+*_dummy.c.base
+
 # Packages
 *.zip
 *.exe
