Moved setting CMAKE_OSX_DEPLOYMENT_TARGET at beginning of script file, otherwise the compilation process fails.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,10 @@
 
 cmake_minimum_required(VERSION 2.8)
 
+if(APPLE AND NOT IOS)
+		set(CMAKE_OSX_DEPLOYMENT_TARGET 10.6)
+endif()
+
 project(FreeRDP C)
 
 set(CMAKE_COLOR_MAKEFILE ON)
@@ -229,7 +233,7 @@ if(APPLE)
                 set(CMAKE_FIND_ROOT_PATH ${CMAKE_FIND_ROOT_PATH} ${FREERDP_IOS_EXTERNAL_SSL_PATH})
         	set_property(GLOBAL PROPERTY XCODE_ATTRIBUTE_SKIP_INSTALL YES)
 	else()
-		set(CMAKE_OSX_DEPLOYMENT_TARGET 10.6)
+#		set(CMAKE_OSX_DEPLOYMENT_TARGET "10.6")
 
 		if(NOT DEFINED CMAKE_OSX_ARCHITECTURES)
 			set(CMAKE_OSX_ARCHITECTURES i386 x86_64)
