--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -64,6 +64,9 @@ foreach(FILEPATH ${FILEPATHS})
 		if(FREERDP_CLIENT_ENABLED)
 			if(NOT (${FREERDP_CLIENT_VENDOR} MATCHES "FreeRDP"))
 				list(APPEND FREERDP_EXTRA_CLIENTS ${FREERDP_CLIENT})
+				if(${FREERDP_CLIENT_VENDOR} MATCHES "${VENDOR}")
+					set(CLIENT_VENDOR_PATH "client/${FREERDP_CLIENT}" PARENT_SCOPE)
+				endif()
 			endif()
 		endif()
 	endif()
