cmake: remove debug output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -504,11 +504,8 @@ endif()
 set(CMAKE_CPACK_INCLUDE_FILE "CMakeCPack.cmake")
 
 if(NOT (VENDOR MATCHES "FreeRDP"))
-
-message("VENDOR: ${VENDOR} CLIENT_VENDOR_PATH: ${CLIENT_VENDOR_PATH}")
-
 	if(DEFINED CLIENT_VENDOR_PATH)
-		if(EXISTS "${CLIENT_VENDOR_PATH}/CMakeCPack.cmake")
+		if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${CLIENT_VENDOR_PATH}/CMakeCPack.cmake")
 			set(CMAKE_CPACK_INCLUDE_FILE "${CLIENT_VENDOR_PATH}/CMakeCPack.cmake")
 		endif()
 	endif()
