--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,6 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-if(APPLE AND NOT IOS)
-		set(CMAKE_OSX_DEPLOYMENT_TARGET 10.6)
-endif()
-
 project(FreeRDP C)
 
 if(NOT DEFINED VENDOR)
@@ -237,7 +233,9 @@ if(APPLE)
                 set(CMAKE_FIND_ROOT_PATH ${CMAKE_FIND_ROOT_PATH} ${FREERDP_IOS_EXTERNAL_SSL_PATH})
         	set_property(GLOBAL PROPERTY XCODE_ATTRIBUTE_SKIP_INSTALL YES)
 	else()
-#		set(CMAKE_OSX_DEPLOYMENT_TARGET "10.6")
+		if(NOT DEFINED VENDOR)
+		    set(CMAKE_OSX_DEPLOYMENT_TARGET "10.6" CACHE STRING "OSX deployment target")
+		endif()
 
 		if(NOT DEFINED CMAKE_OSX_ARCHITECTURES)
 			set(CMAKE_OSX_ARCHITECTURES i386 x86_64)
