cmake: fix vendor-specific including

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -511,10 +511,12 @@ set(CMAKE_CPACK_INCLUDE_FILE "CMakeCPack.cmake")
 
 if(NOT (VENDOR MATCHES "FreeRDP"))
 	if(DEFINED CLIENT_VENDOR_PATH)
-		if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${CLIENT_VENDOR_PATH}/CMakeCPack.cmake")
+		if(EXISTS "${CMAKE_SOURCE_DIR}/${CLIENT_VENDOR_PATH}/CMakeCPack.cmake")
 			set(CMAKE_CPACK_INCLUDE_FILE "${CLIENT_VENDOR_PATH}/CMakeCPack.cmake")
 		endif()
 	endif()
 endif()
+
+#message("VENDOR: ${VENDOR} CLIENT_VENDOR_PATH: ${CLIENT_VENDOR_PATH} CMAKE_CPACK_INCLUDE_FILE: ${CMAKE_CPACK_INCLUDE_FILE}")
 
 include(${CMAKE_CPACK_INCLUDE_FILE})
